<resources>
    <string name="app_name">Messenger</string>
    <string name="example_mail_ru">example@mail.ru</string>
    <string name="password">Password</string>
    <string name="login_btn">Login</string>
    <string name="create_account_btn">Create Account</string>
    <string name="sign_in">Sign IN</string>
    <string name="create_new_account">Create new Account</string>
    <string name="username">Username</string>
    <string name="cancel">Cancel</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="users">User Information</string>
    <string name="chat">Chat</string>
    <string name="username1">"Username: "</string>
    <string name="back">Back</string>
    <string name="email">Email</string>
    <string name="sign_out">Sign OUT</string>
</resources>