<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:padding="16dp"
        android:textColorHighlight="@color/black"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/mail_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/example_mail_ru"
        android:layout_margin="10dp"
        />

    <EditText
        android:id="@+id/password_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/password"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:text="@string/login_btn" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/create_account_btn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:text="@string/create_account_btn" />
</LinearLayout>